--- a/Style/burger.css
+++ b/Style/burger.css
@@ -420,7 +420,10 @@ html, body {
 
 /* TÉLÉPHONE */
 @media screen and (max-width: 767px){
- 
+  button{
+    background-color: rgba(255, 255, 255, 0);
+  }
+  
 
   .backSimple {
     height: 100vh;
@@ -621,6 +624,9 @@ html, body {
     flex-direction: column;
     align-items: center;
     padding: 0 30px;
+  }
+  button{
+    background-color: rgba(255, 255, 255, 0);
   }
   
   .responsiveSimple, .responsiveSmash, .responsiveFish, .responsiveChicken, .responsiveRoyal {
