--- a/Style/petitefaim.css
+++ b/Style/petitefaim.css
@@ -1,3 +1,4 @@
+@import url(./menu.css);
 /* PETITEEEE FAIMMMMMMM */
 * {
     margin: 0;
@@ -12,181 +13,7 @@ html, body {
 .responsiveNuggets, .responsiveMozza, .responsiveChili, .responsiveOignons, .responsiveSalade{
   display: none;
 }
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  background-color: #171816ae;
-  padding: 10px;
-  position: fixed;  
-  top: 0;  
-  width: 100vw;  
-  height: 6vh; 
-  z-index: 1000;  
-}
 
-/* .navLogo {
-  width: auto;
-  height: auto;
-}
-
-.navLogo img {
-  width: 30px;
-  height: 30px;
-} */
-.logoHome{
-  margin-left: 15px;
-}
-.navLogo{
-  display: none;
-}
-.logoHome img{
-  width: 30px;
-  height: 30px;
-}
-.logoHome:hover{
-  transform: scale(1.08); 
-}
-.burgerMenu {
-  display: none; /* Cache le burger menu sur grand écran */
-}
-.deroulant{
-  text-decoration: none;
-  list-style: none;
-}
-.navMenu {
-  flex-direction: row;
-  width: auto;
-  position: static;
-  background-color: transparent;
-  display: flex; /* Affiche le menu horizontalement */
-}
-.submenu{
-  list-style: none;
-}
-.navMenu li {
-  width: auto;
-  padding: 10px 15px;
-  position: relative; /* Ajouté pour permettre le positionnement relatif du sous-menu */
-}
-
-.menuDeroulant {
-  display: none;
-  position: absolute;
-  background-color: #171816ba;
-  padding: 10px;
-  border-radius: 5px;
-  top: 100%; /* Positionne le sous-menu directement en dessous de son parent */
-  left: 0;
-  list-style: none; /* Enlève les puces des listes */
-  padding: 0; /* Enlève le padding par défaut */
-  margin: 0; /* Enlève la marge par défaut */
-}
-
-.menuDeroulant li {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  list-style: none;
-}
-
-.submenu:hover .menuDeroulant {
-  display: flex;
-  flex-direction: column;
-}
-
-.navMenu .submenu > a {
-  color: white;
-}
-
-.navMenu a, .menuDeroulant a {
-  color: white;
-  text-decoration: none;
-}
-
-.navMenu a:hover, .menuDeroulant a:hover {
-  background-color: #f1f1f1;
-  color: black;
-}
-/* RESPONSIVE */
-/* TÉLÉPHONE */
-@media screen and (max-width: 767px) {
-  .navLogo {
-      width: 40px;
-      height: 40px;
-      display: block;
-  }
-.navbar{
-  height: 50px;
-}
-  .navLogo img {
-      width: 100%;
-      height: 100%;
-  }
-
-  .burgerMenu {
-      display: block;
-  }
-
-  .navMenu {
-      display: none;
-      flex-direction: column;
-      width: 100%;
-      position: absolute;
-      top: 5vh;
-      left: 0;
-      background-color: #171816ae;
-      color: white;
-      list-style: none;
-      z-index: 999; /* Assurez-vous que le menu est au-dessus des autres éléments */
-  }
-
-  .navMenu.active {
-      display: flex;
-  }
-
-  .menuDeroulant {
-      display: none;
-      flex-direction: column;
-      list-style: none;
-      color: white;
-      /* background-color: #171816ae;  */
-  }
-
-  .submenu .menuDeroulant {
-      position: static; /* Assurez-vous que les sous-menus sont positionnés statiquement */
-  }
-
-  .submenu:hover .menuDeroulant,
-  .submenu .menuDeroulant.active {
-      display: flex;
-  }
-
-  .navMenu li {
-      width: 100%;
-      text-align: center;
-      padding: 10px;
-      color: white;
-  }
-.logoHome{
-  display: none;
-}
-  .burger-menu img {
-      height: 40px;
-      width: 40px;
-  }
-
-  .navMenu a, .menuDeroulant a {
-      color: white;
-      text-decoration: none;
-      padding: 10px; /* Ajoutez du padding pour les liens du menu */
-  }
-
-  .navMenu a:hover, .menuDeroulant a:hover {
-      background-color: #f1f1f1;
-      color: black;
-  }
-}
 /* OIGNONSR RINGS */
 .backOignons {
     height: 100vh;
@@ -471,31 +298,6 @@ html, body {
     height: 100px;
    
   }
-/*   
-  .optionsupp2{
-    height: 35vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px; 
-    margin-top: -5vh;
-  }
-  .optionsupp span{
-    font-size: 1.5em;
-    color: #C2402D;
-  }
-  .optionsupp p{
-    height: 70px;
-    width: 70px;
-    font-size: 1.4em;
-    background-color:#C2402D;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 3px solid white
-  } */
 
   .item {
     position: relative;
@@ -645,6 +447,8 @@ html, body {
   .prix-container4 p {
     margin: 0;
     font-size: 1.3em;
+    height: 80px;
+    width: 80px;
   }
 .optionPetite{
   height: 20px;
