--- a/Style/burger.css
+++ b/Style/burger.css
@@ -1,182 +1,18 @@
+@import url(./menu.css);
 /* BURGERRRRRRRRRRRRR */
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* Cette propriété s'assure que padding et border sont inclus dans la largeur/hauteur total(e) de l'élément */
+    box-sizing: border-box; 
+    letter-spacing: 2px;
 }
 html, body {
     width: 100%;
     height: 100%;
+   
+
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  background-color: #171816ae;
-  padding: 10px;
-  position: fixed;  
-  top: 0;  
-  width: 100vw;  
-  height: 6vh; 
-  z-index: 1000;  
-}
-
-
-.logoHome{
-  margin-left: 15px;
-}
-.navLogo{
-  display: none;
-}
-.logoHome img{
-  width: 30px;
-  height: 30px;
-}
-
-.burgerMenu {
-  display: none; 
-}
-.deroulant{
-  text-decoration: none;
-}
-.navMenu {
-  flex-direction: row;
-  width: auto;
-  position: static;
-  background-color: transparent;
-  display: flex; /* Affiche le menu horizontalement */
-}
-
-.navMenu li {
-  width: auto;
-  padding: 10px 15px;
-  position: relative; /* Ajouté pour permettre le positionnement relatif du sous-menu */
-}
-.submenu{
-  list-style: none;
-}
-.logoHome:hover{
-  transform: scale(1.08); 
-}
-.menuDeroulant {
-  display: none;
-  position: absolute;
-  background-color: #171816ba;
-  padding: 10px;
-  border-radius: 5px;
-  top: 100%; /* Positionne le sous-menu directement en dessous de son parent */
-  left: 0;
-  list-style: none; /* Enlève les puces des listes */
-  padding: 0; /* Enlève le padding par défaut */
-  margin: 0; /* Enlève la marge par défaut */
-}
-
-.menuDeroulant li {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-   list-style: none;
-}
-
-.submenu:hover .menuDeroulant {
-  display: flex;
-  flex-direction: column;
-}
-
-.navMenu .submenu > a {
-  color: white;
-}
-
-.navMenu a, .menuDeroulant a {
-  color: white;
-  text-decoration: none;
-}
-
-.navMenu a:hover, .menuDeroulant a:hover {
-  background-color: #f1f1f1;
-  color: black;
-}
-
-/* RESPONSIVE */
-/* TÉLÉPHONE */
-@media screen and (max-width: 767px) {
-  .navLogo {
-      width: 40px;
-      height: 40px;
-      display: block;
-  }
-.navbar{
-  height: 50px;
-}
-  .navLogo img {
-      width: 100%;
-      height: 100%;
-  }
-
-  .burgerMenu {
-      display: block;
-  }
-
-  .navMenu {
-      display: none;
-      flex-direction: column;
-      width: 100%;
-      position: absolute;
-      top: 5vh;
-      left: 0;
-      background-color: #171816ae;
-      color: white;
-      list-style: none;
-      z-index: 999; /* Assurez-vous que le menu est au-dessus des autres éléments */
-  }
-
-  .navMenu.active {
-      display: flex;
-  }
-
-  .menuDeroulant {
-      display: none;
-      flex-direction: column;
-      list-style: none;
-      color: white;
-      /* background-color: #171816ae;  */
-  }
-
-  .submenu .menuDeroulant {
-      position: static; /* Assurez-vous que les sous-menus sont positionnés statiquement */
-  }
-
-  .submenu:hover .menuDeroulant,
-  .submenu .menuDeroulant.active {
-      display: flex;
-  }
-
-  .navMenu li {
-      width: 100%;
-      text-align: center;
-      padding: 10px;
-      color: white;
-  }
-.logoHome{
-  display: none;
-}
-  .burger-menu img {
-      height: 40px;
-      width: 40px;
-  }
-
-  .navMenu a, .menuDeroulant a {
-      color: white;
-      text-decoration: none;
-      padding: 10px; /* Ajoutez du padding pour les liens du menu */
-  }
-
-  .navMenu a:hover, .menuDeroulant a:hover {
-      background-color: #f1f1f1;
-      color: black;
-  }
-}
     
 /* SMASH BURGEEERRRRRRRRRR */
 
@@ -307,7 +143,7 @@ html, body {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border: 3px solid white
+ 
   }
 
 
@@ -419,13 +255,14 @@ html, body {
 
 
 /* TÉLÉPHONE */
+
 @media screen and (max-width: 767px){
   button{
     background-color: rgba(255, 255, 255, 0);
   }
   
 
-  .backSimple {
+  .backSimple{
     height: 100vh;
     width: 100vw;
     background-image: url(../img/backtelephone.png);
@@ -439,7 +276,7 @@ html, body {
   .backSmash {
     height: 100vh;
     width: 100vw;
-    background-image: url(img/backtelephone.png);
+    background-image: url(../img/backtelephone.png);
     display: flex;
     flex-direction: column; /* Les enfants sont disposés en colonne */
     align-items: center; /* Centre les enfants horizontalement */
@@ -619,7 +456,7 @@ html, body {
   .backSimple, .backSmash, .backFish, .backChicken, .backRoyal {
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtablette.png);
+    background-image: url(../img/backtelephone.png);
     display: flex;
     flex-direction: column;
     align-items: center;
