--- a/Style/classique.css
+++ b/Style/classique.css
@@ -1,3 +1,4 @@
+@import url(./menu.css);
 /* CLASSIQUUUEEEEEEEEEEEEEE*/
 * {
     margin: 0;
@@ -10,174 +11,6 @@
     
   }
  
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    background-color: #171816ae;
-    padding: 10px;
-    position: fixed;  
-    top: 0;  
-    width: 100vw;  
-    height: 6vh; 
-    z-index: 1000;  
-  }
-  
-  .logoHome{
-    margin-left: 15px;
-  }
-  .navLogo{
-    display: none;
-  }
-  .logoHome img{
-    width: 30px;
-    height: 30px;
-  }
-  .logoHome:hover{
-    transform: scale(1.08); 
-  }
-  .burgerMenu {
-    display: none; /* Cache le burger menu sur grand écran */
-  }
-  .deroulant{
-    text-decoration: none;
-  }
-  .navMenu {
-    flex-direction: row;
-    width: auto;
-    position: static;
-    background-color: transparent;
-    display: flex; /* Affiche le menu horizontalement */
-  }
-  .submenu{
-    list-style: none;
-  }
-  .navMenu li {
-    width: auto;
-    padding: 10px 15px;
-    position: relative; /* Ajouté pour permettre le positionnement relatif du sous-menu */
-  }
-  
-  .menuDeroulant {
-    display: none;
-    position: absolute;
-    background-color: #171816ba;
-    padding: 10px;
-    border-radius: 5px;
-    top: 100%; /* Positionne le sous-menu directement en dessous de son parent */
-    left: 0;
-    list-style: none; /* Enlève les puces des listes */
-    padding: 0; /* Enlève le padding par défaut */
-    margin: 0; /* Enlève la marge par défaut */
-  }
-  
-  .menuDeroulant li {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    list-style: none;
-  }
- 
-  .submenu:hover .menuDeroulant {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .navMenu .submenu > a {
-    color: white;
-  }
-  
-  .navMenu a, .menuDeroulant a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .navMenu a:hover, .menuDeroulant a:hover {
-    background-color: #f1f1f1;
-    color: black;
-  }
-  
-
-
- /* RESPONSIVE */
-/* TÉLÉPHONE */
-@media screen and (max-width: 767px) {
-  .navLogo {
-      width: 40px;
-      height: 40px;
-      display: block;
-  }
-  .navbar{
-    height: 50px;
-  }
-  .navLogo img {
-      width: 100%;
-      height: 100%;
-  }
-
-  .burgerMenu {
-      display: block;
-  }
-
-  .navMenu {
-      display: none;
-      flex-direction: column;
-      width: 100%;
-      position: absolute;
-      top: 5vh;
-      left: 0;
-      background-color: #171816ae;
-      color: white;
-      list-style: none;
-      z-index: 999; /* Assurez-vous que le menu est au-dessus des autres éléments */
-  }
-
-  .navMenu.active {
-      display: flex;
-  }
-
-  .menuDeroulant {
-      display: none;
-      flex-direction: column;
-      list-style: none;
-      color: white;
-      background-color: #171816ae; /* Ajoutez une couleur de fond pour les sous-menus */
-  }
-
-  .submenu .menuDeroulant {
-      position: static; /* Assurez-vous que les sous-menus sont positionnés statiquement */
-  }
-
-  .submenu:hover .menuDeroulant,
-  .submenu .menuDeroulant.active {
-      display: flex;
-  }
-
-  .navMenu li {
-      width: 100%;
-      text-align: center;
-      padding: 10px;
-      color: white;
-  }
-.logoHome{
-  display: none;
-}
-  .burger-menu img {
-      height: 40px;
-      width: 40px;
-  }
-
-  .navMenu a, .menuDeroulant a {
-      color: white;
-      text-decoration: none;
-      padding: 10px; /* Ajoutez du padding pour les liens du menu */
-  }
-
-  .navMenu a:hover, .menuDeroulant a:hover {
-      background-color: #f1f1f1;
-      color: black;
-  }
-}
 
     
 /* KEBAAAABBBBBBBBBBB*/
@@ -306,7 +139,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border: 3px solid white
+   
   }
 
 
@@ -464,8 +297,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    border: 3px solid white
+   
   }
 
   
@@ -623,7 +455,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border: 3px solid white
+  
   }
 
   .supplémentsSandwich{
@@ -905,7 +737,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border: 3px solid white
+   
   }
 
   .item {
@@ -963,15 +795,6 @@
     overflow-x: hidden;
   }
   
-
-
-  .burger-menu {
-    display: block;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    z-index: 100;
-  }
   .responsiveKebab, .responsivePanini, .responsiveGalette, .responsiveSandwich, .responsiveEnfant{
     display: block;
       }
@@ -1582,7 +1405,7 @@ width: 65px;
   .backKebab {
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtablette.png);
+    background-image: url(../img/backtelephone.png);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1745,7 +1568,7 @@ width: 65px;
   .backGalette, .backPanini{
     height: 100vh;
     width: 100vw;
-    background-image: url(../img/backtablette.png);
+    background-image: url(../img/backtelephone.png);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1904,7 +1727,7 @@ margin-top: 5px;
 .backSandwich {
   height: 100vh;
   width: 100vw;
-  background-image: url(../img/backtablette.png);
+  background-image: url(../img/backtelephone.png);
   background-color: black;
   display: flex;
   flex-direction: column; /* Les enfants sont disposés en colonne */
@@ -2049,7 +1872,7 @@ margin-left: 20px;
 .backEnfant {
   height: 100vh;
   width: 100vw;
-  background-image: url(../img/backtablette.png);
+  background-image: url(../img/backtelephone.png);
   background-color: black;
   display: flex;
   flex-direction: column; /* Les enfants sont disposés en colonne */
