--- a/Style/petitefaim.css
+++ b/Style/petitefaim.css
@@ -338,12 +338,12 @@ html, body {
 /* RESPONSIVE */
 
 
-
+/* TELEPHONE */
 
 @media screen and (max-width: 767px){
 
 
-  .backNuggets {
+  .backNuggets, .backMozza, .backChili, .backOignons {
     height: 100vh;
     width: 100vw;
     background-image: url(../img/backtelephone.png);
@@ -353,33 +353,7 @@ html, body {
     align-items: center; /* Centre les enfants horizontalement */
     padding: 0 20px; /* Ajout de padding pour ne pas que le contenu touche les bords */
   }
-  .backMozza {
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../img/backtelephone.png);
-    display: flex;
-    flex-direction: column; /* Les enfants sont disposés en colonne */
-    align-items: center; /* Centre les enfants horizontalement */
-    padding: 0 20px; /* Ajout de padding pour ne pas que le contenu touche les bords */
-  }
-  .backOignons {
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../img/backtelephone.png);
-    display: flex;
-    flex-direction: column; /* Les enfants sont disposés en colonne */
-    align-items: center; /* Centre les enfants horizontalement */
-    padding: 0 20px; /* Ajout de padding pour ne pas que le contenu touche les bords */
-  }
-  .backChili {
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../img/backtelephone.png);
-    display: flex;
-    flex-direction: column; /* Les enfants sont disposés en colonne */
-    align-items: center; /* Centre les enfants horizontalement */
-    padding: 0 20px; /* Ajout de padding pour ne pas que le contenu touche les bords */
-  }
+ 
   .responsiveNuggets, .responsiveMozza, .responsiveChili, .responsiveOignons{
     display: block;
     height: 40vh;
@@ -388,8 +362,8 @@ html, body {
   
   }
 .responsiveNuggets img, .responsiveMozza img, .responsiveChili img, .responsiveOignons img{
- height: 450px;
- width: 450px;
+ height: 250px;
+ width: 250px;
 }
   .titre4 {
     height: 20vh;
@@ -409,18 +383,17 @@ html, body {
   }
 
   .h2Quatre h2 {
-    font-size: 1.7em;;
+    font-size: 1.3em;
+    margin-left: 15vw;
   }
 
   .lesPrix {
     height: 40vh;
-    width: 100vw;
+    width: 90vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-right: 100px;
-   
    
   }
 
@@ -434,35 +407,25 @@ html, body {
    margin-left: -5px;
   }
 
-  .prix-container4 .optionPetite {
-    height: auto;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0;
-    text-align: center;
-  }
+ 
 
   .prix-container4 p {
-    margin: 0;
     font-size: 1.3em;
-    height: 80px;
-    width: 80px;
+    height: 60px;
+    width: 60px;
   }
 .optionPetite{
-  height: 20px;
-  width: 20px;
-  gap: 30px;
+margin: 0;
+padding: 0;
   margin-top: -90px;
 }
   .optionPetite span {
-    font-size: 1.4em;
+    font-size: 1em;
 
   
   }
   .optionPetite p{
-    font-size: 1.7em;
+    font-size: 1.2em;
   }
 
   /* SALADE */
@@ -517,7 +480,7 @@ html, body {
     text-align: center;
     justify-content: center; 
     align-items: center; 
-    height: 15vh; 
+    height: 20vh; 
     width: 100vw; 
   margin-top: 50px;
   margin-left: 20vw;
@@ -532,33 +495,35 @@ html, body {
 }
 
   .h2 {
-    font-size: 1.7em;
+    font-size: 1.2em;
     height: 5vh; 
     width: 100vw;
   }
 
   .h2supp2{
-    font-size: 1.5em;
+    font-size: 1.1em;
     height: 10vh;
     width: 100vw;
     margin-top: 50px;
  
   }
    
-
   .suppléments2 img {
-    height: 80px;
-    width: 80px; 
+    height: 45px;
+    width: 45px;
   }
   .suppléments2{
     height: 15vh;
-    width: 80vw;
+    width: 90vw;
     margin-top: -10px;
+    display: flex;
+    flex-direction: row;
+
    
   }
 .suppléments2 .item{
-  height: 90px;
-  width: 90px;
+  height: 65px;
+  width: 65px;
 }
 
 
@@ -569,17 +534,244 @@ html, body {
 @media screen and (min-width: 768px) and (max-width: 1024px){
   .backNuggets, .backMozza, .backChili, .backOignons, .backSalade{
     background-image: url(../img/backtelephone.png);
+    display: flex;
+    flex-direction: column;
   }
   .responsiveNuggets img, .responsiveMozza img, .responsiveChili img, .responsiveOignons img, .responsiveSalade img{
-    height: 550px;
-    width: 550px;
+    height: 450px;
+    width: 450px;
+    margin-top: -20vh;
    }
+
    .responsiveNuggets, .responsiveMozza, .responsiveChili, .responsiveOignons, .responsiveSalade{
     display: block;
     height: 20vh;
     width: 100vw;
    text-align: center;
-   margin-left: -20vw;
+   margin-left: -15vw;
+  }
+
+  .titre4 {
+    height: 20vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .h2Quatre {
+    height: 5vh;
+    margin-top: 2px;
+    margin-left: -45vw;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+  .h2Quatre h2 {
+    font-size: 1.8em;
 
   }
+
+
+  .lesPrix {
+    height: 40vh;
+    width: 90vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+   margin-left: 35vw;
+  }
+
+  .prix-container4 {
+    height: auto;
+    width: 100vw;
+    height: 7vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+   margin-left: -5px;
+   gap: 10%;
+  }
+
+  .prix-container4 p {
+    font-size: 1.3em;
+    height: 90px;
+    width: 90px;
+  }
+
+.optionPetite{
+margin: 0;
+padding: 0;
+margin-top: -90px;
+}
+ .optionPetite span {
+    font-size: 1.5em;
+     width: 10vw;
+  }
+  .optionPetite p{
+    font-size: 1.7em;
+  }
+
+  /* SALADE */
+
+
+.responsiveSalade{
+  display: block;
+  height: 25vh;
+    width: 100vw;
+   text-align: center;
+   margin-top: 25vh;
+ margin-left: -25vw;
+}
+.responsiveSalade img{
+  height: 250px;
+  width: 250px;
+}
+  .titre2 {
+    width: 100vw;
+    height: 60vh; 
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;  
+  }
+
+  .h2Second {
+    height: 10vh;
+    width: 100vw;
+    
+  }
+
+  .description2 {
+    width: 90vw;
+    height: 5vh;
+    
+  }
+
+  .description2 p {
+    font-size: 1.4em;
+  }
+
+  .prix-container2 , .prix2{
+    display: flex;
+    text-align: center;
+    justify-content: center; 
+    align-items: center; 
+    height: 20vh;
+    width: 100vw;
+    margin-top: -5vh;
+  }
+
+
+  .option {
+    width: 100px;
+  }
+
+  .option span {
+    font-size: 1.7em;
+  }
+
+  .prix2 p {
+    height: 90px;
+    width: 90px;
+    font-size: 1.9em;
+  }
+
+  .h2 {
+    font-size: 1.9em;
+    height: auto;
+    width: 100vw;
+    text-align: center;
+    margin: 20px 0;
+  }
+
+  .titresupp2 {
+    width: 100vw;
+    height: 40vh;
+    text-align: center;
+ 
+  }
+
+  .h2supp2 {
+    font-size: 1.7em;
+    height: 10vh;
+    width: 100vw;
+    
+  }
+
+  .suppléments2 {
+    height: 15vh;
+    width: 90vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
+    margin-top: -30px;
+  }
+
+  .suppléments2 .item {
+    height: 90px;
+    width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .suppléments2 img {
+    height: 60px;
+    width: 60px;
+  }
+
+  .optionsupp2 {
+    height: 15vh;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: 5px;
+    margin-left: 10vw;
+  }
+
+  .optionsupp2 span {
+    font-size: 1.4em;
+  }
+
+  .optionsupp2 p {
+    height: 60px;
+    width: 60px;
+    font-size: 1.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .item img {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.3s ease;
+  }
+
+  .item:hover img {
+    transform: scale(1.3);
+  }
+
+  .label {
+    position: absolute;
+    z-index: 10;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+    font-size: 1em;
+    padding: 2px 0;
+  }
+
 }
